#46 Embed static frontend files inside Golang backend server's binary
