# docs/swagger/simple_bank.swagger.json
@@ -1,12 +1,12 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Simple Bank",
-    "version": "1.0",
+    "title": "Simple Bank API",
+    "version": "1.2",
     "contact": {
-      "name": "gRPC-Gateway project",
-      "url": "https://github.com/grpc-ecosystem/grpc-gateway",
-      "email": "none@example.com"
+      "name": "SimpleBank",
+      "url": "https://github.com/hykura1501",
+      "email": "voho39850@gmail.com"
     }
   },
   "tags": [
@@ -23,6 +23,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
+        "summary": "Create new user",
+        "description": "Use this API to create a new user",
         "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
@@ -55,6 +57,8 @@
     },
     "/v1/login_user": {
       "post": {
+        "summary": "Login user",
+        "description": "Use this API to login user",
         "operationId": "SimpleBank_LoginUser",
         "responses": {
           "200": {
